remove deprecated method to save CICD step output

--- a/.github/workflows/BuildRelease.yml
+++ b/.github/workflows/BuildRelease.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Generate release tag
         id: tag
         run: |
-          echo "::set-output name=release_tag::As_of_$(date +"%Y.%m.%d_%H-%M")"
+          echo "release_tag=As_of_$(date +"%Y.%m.%d_%H-%M")" >> $GITHUB_OUTPUT
       # Deploy built pdf to releases
       - name: Release
         uses: softprops/action-gh-release@v2.3.3
